--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,11 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
-        "phpunit/phpunit": "^8.0",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "nunomaduro/larastan": "^0.4.3",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "^0.11.19",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "classmap": [
